--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://github.com/monacoglynn/react-portfolio",
   "dependencies": {
     "@fontsource/raleway": "^4.5.10",
