--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://github.com/monacoglynn/react-portfolio",
+  "homepage": "https://monacoglynn.github.io/react-portfolio",
   "dependencies": {
     "@fontsource/raleway": "^4.5.10",
     "@testing-library/jest-dom": "^5.16.5",
