--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.0",
     "create-react-app": "^5.0.1",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^4.0.0",
     "portfolio": "^0.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
