--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://monacoglynn.github.io/react-portfolio",
+  "homepage": "https://monacoglynn.github.io/",
   "dependencies": {
     "@fontsource/raleway": "^4.5.10",
     "@fortawesome/fontawesome-free": "^6.2.0",
